# QuizCraft.ai

./: .gitignore
ai-service/: main.py  pyproject.toml  requirements.txt
ai-service/app/: main.py  test.py
ai-service/app/api/: generate.py  ingest.py  router.py
ai-service/app/core/: config.py  paths.py
ai-service/app/embeddings/: service.py
ai-service/app/llm/: service.py
ai-service/app/parser/: loader.py  service.py
ai-service/app/prompts/: rag_prompt.py  test_generation.py
ai-service/app/rag/: service.py
ai-service/app/schemas/: requests.py  responses.py
ai-service/app/scripts/: dev.py
ai-service/app/splitter/: service.py
ai-service/app/vectorstore/: service.py
ai-service/scripts/: test_embeddings.py  test_qdrant.py  test_store_vectors.py
backend/: pom.xml
backend/src/main/java/com/QuizCraftBackend/backend/: BackendApplication.java
backend/src/test/java/com/QuizCraftBackend/backend/: BackendApplicationTests.java
docker/: docker-compose.yml
frontend/: app.py  requirements.txt
frontend/assets/: styles.css
frontend/components/: api.py  cards.py  navbar.py
frontend/pages/: _Generate_Exam.py  _Results.py  _Take_Exam.py  _Upload.py
frontend/utils/: session.py
